<resources>
    <string name="app_name" translatable="false">MobileProject</string>
    <string name="santa_croce" translatable="false">Santa Croce</string>
    <string name="event">Event</string>
    <string name="timetables">Timetable</string>
    <string name="groups">Group</string>
    <string name="liturgy">Liturgy</string>
    <string name="hours">Hours</string>
    <string name="news">News</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum</string>
    <string name="news_title">Title: </string>
    <string name="news_description">Description: </string>
    <string name="news_date">Date: </string>
    <string name="news_time">Time: </string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="times">Times</string>
    <string name="secretary">Secretary</string>
    <string name="contact">Contact</string>
    <string name="title_activity_about" translatable="false">AboutActivity</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="expand" translatable="false">expand</string>
    <string name="monday">Monday</string>
    <string name="time_placeholder" translatable="false">00:00</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="background" translatable="false">background</string>
    <string name="_0721" translatable="false">0721</string>
    <string name="cap" translatable="false">Cap</string>
    <string name="city">City</string>
    <string name="where">Where</string>
    <string name="street">Street</string>
    <string name="telephone">Telephone</string>
    <string name="mobile">Mobile</string>
    <string name="_3317" translatable="false">3317</string>
    <string name="call_mobile_phone" translatable="false">call_mobile_phone</string>
    <string name="call_telephone" translatable="false">call_telephone</string>
    <string name="search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_upload">Upload</string>
    <string name="action_copy">Copy</string>
    <string name="action_print">Print</string>
    <string name="invitatory">Invitatory</string>
    <string name="lectures_office">Lectures\' office</string>
    <string name="laude">Laude</string>
    <string name="medium">Medium</string>
    <string name="vesper">Vesper</string>
    <string name="compline">Compline</string>
    <string name="title_hours_activity" translatable="false">HoursActivity</string>
    <string name="date">Date</string>
</resources>
