<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp"
    tools:context=".hours.HoursActivity"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <Button
        android:id="@+id/invitatory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryTextColor"
        android:onClick="hoursClick"
        android:text="@string/invitatory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lecture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryTextColor"
        android:onClick="hoursClick"
        android:text="@string/lectures_office"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/invitatory" />

    <Button
        android:id="@+id/laude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryTextColor"
        android:onClick="hoursClick"
        android:text="@string/laude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lecture" />

    <Button
        android:id="@+id/medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryTextColor"
        android:onClick="hoursClick"
        android:text="@string/medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/laude" />

    <Button
        android:id="@+id/vesper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryTextColor"
        android:onClick="hoursClick"
        android:text="@string/vesper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/medium" />

    <Button
        android:id="@+id/compline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryTextColor"
        android:onClick="hoursClick"
        android:text="@string/compline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vesper" />

</androidx.constraintlayout.widget.ConstraintLayout>